<resources>
    <string name="app_name">ChatApp</string>
    <string name="settings">Settings</string>
    <string name="send_button_label">Send</string>
    <string name="hello">How are you?</string>
    <string name="sample_name">Tom hanks</string>
    <string name="mesage_hint">Type a message...</string>
    <string name="join">JOIN US NOW</string>
    <string name="about_name">About and Email</string>
    <string name="edit">edit</string>
    <string name="cancel">Cancel</string>
    <string name="write_new_description">Write new description...</string>
    <string name="write_new_name">Write new name...</string>
</resources>
