<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image_editable"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/anonymous"
                app:civ_border_color="#000000" />

            <ImageButton
                android:id="@+id/myButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/profile_image_editable"
                android:layout_alignTop="@+id/profile_image_editable"
                android:layout_marginTop="90dp"
                android:background="#fff"
                android:src="@drawable/ic_camera_alt_black_24dp"
                android:text="@string/edit" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sample_name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/edit_user_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="#fff"
                android:onClick="editName"
                android:src="@drawable/ic_create_24dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/about_name"
                android:textColor="#ff0000"
                android:textSize="17sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="15dp"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <ImageButton
                    android:id="@+id/edit_user_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="#fff"
                    android:onClick="editAbout"
                    android:src="@drawable/ic_create_24dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c8c8" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>